<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"

    tools:context=".RegisterActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRegister"
        style="@style/CARDBACKGROUND"
        android:layout_width="300dp"
        android:layout_height="500dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/register"
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.781"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.035" />

            <EditText
                android:id="@+id/usernameInputRegister"
                style="@style/INPUTTEXT"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:hint="@string/username"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register" />

            <EditText
                android:id="@+id/passwordRegister"
                style="@style/INPUTTEXT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameInputRegister" />

            <EditText
                android:id="@+id/displayName"
                style="@style/INPUTTEXT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:drawablePadding="28dp"
                android:hint="@string/display_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />

            <Button
                android:id="@+id/uploadButton"
                style="@style/BUTTON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/upload_picture"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayName"
                app:layout_constraintVertical_bias="0.0" />


            <Button
                android:id="@+id/submitButtonRegister"
                style="@style/BUTTON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="52dp"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.149"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/allreadyRegisterd"
                style="@style/BOTTOMTEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_registered_click_here_to_login"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:id="@+id/confirmPassword"
                style="@style/INPUTTEXT"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordRegister" />

            <ImageView
                android:id="@+id/selectedImage"
                style="@style/PROFILEPLACEHOLDER"
                android:layout_width="78dp"
                android:layout_height="99dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayName"
                app:layout_constraintVertical_bias="0.17" />

            <ImageView
                android:id="@+id/showPassword"
                style="@style/ICON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="@+id/passwordRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.89"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/passwordRegister"
                app:layout_constraintVertical_bias="0.38"
                app:srcCompat="@drawable/ic_hidepassword" />

            <ImageView
                android:id="@+id/showConfirmPassword"
                style="@style/ICON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toTopOf="@+id/displayName"
                app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
                app:layout_constraintHorizontal_bias="0.889"
                app:layout_constraintStart_toStartOf="@+id/confirmPassword"
                app:layout_constraintTop_toTopOf="@+id/confirmPassword"
                app:srcCompat="@drawable/ic_hidepassword" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/settings"
        style="@style/SETTINGS"
        android:layout_width="48dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        app:srcCompat="@drawable/ic_settings" />

    <ImageView
        android:id="@+id/information"
        style="@style/SETTINGS"
        android:layout_width="48dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_information" />


</androidx.constraintlayout.widget.ConstraintLayout>
